Fix alignment of image icons with icon icons

--- a/app/assets/stylesheets/graph_starter/application.scss
+++ b/app/assets/stylesheets/graph_starter/application.scss
@@ -49,3 +49,9 @@ body.graph_starter-assets-controller.show-action #right-column .items .content {
   width: 100%;
   overflow-wrap: break-word;
 }
+
+.cards .card .item .ui.avatar.image {
+  width: 1.7em;
+  height: 1.7em;
+  margin-left: -0.25em;
+}
